@@ -1,3 +1,8 @@
+2001-07-17  Dave Peticolas  <dave@krondo.com>
+
+	* src/engine/Transaction.c (xaccTransAppendSplit): make sure
+	split's value conforms to the transaction common currency.
+
 2001-07-12  Dave Peticolas  <dave@krondo.com>
 
 	* src/gnome/window-register.c: same as below
